--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=eb3a075cd903ff553469eb160a2cb829&libraries=services,clusterer"></script>
     <title>엑스퍼트 아카데미</title>
   </head>
   <body>
